--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Đăng nhập</title>
@@ -27,36 +27,23 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-md-12 mb-5">
+                <div class="col-md-6 offset-md-3">
                     <form action="#" id="loginForm" class="p-5 bg-white">
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                        <div class="row form-group">
-                            <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="login">Tài khoản</label>
-                                <input name="username" type="text" id="login" class="form-control" placeholder="Tài khoản...">
-                            </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold" for="login">Tài khoản</label>
+                            <input name="username" type="text" id="login" class="form-control" placeholder="Tài khoản...">
                         </div>
 
-                        <div class="row form-group">
-                            <div class="col-md-12">
-                                <label class="font-weight-bold" for="password">Mật khẩu</label>
-                                <input name="password" type="password" id="password" class="form-control" placeholder="Mật khẩu...">
-                            </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold" for="password">Mật khẩu</label>
+                            <input name="password" type="password" id="password" class="form-control" placeholder="Mật khẩu...">
                         </div>
-                        <div class="row form-group">
-                            <div class="col-md-12 mb-3 mb-md-0">
-                                <a th:href="@{/register}" class="hyperlink font-italic t-14">Bạn chưa có tài khoản? Bấm để đăng ký</a>
-                            </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary px-4 py-2 btn-block btn-lg">Đăng nhập</button>
                         </div>
-                        <div class="row form-group">
-                            <div class="col-md-12 text-center">
-                                <button type="submit" class="btn-reset-css btn-svg-UI fill-green">
-                                    <svg>
-                                        <rect></rect>
-                                    </svg>
-                                    <span>Đăng nhập</span>
-                                </button>
-                            </div>
+                        <div class="form-group text-center mb-0">
+                            <a th:href="@{/register}" class="hyperlink small">Bạn chưa có tài khoản? Bấm để đăng ký</a>
                         </div>
                     </form>
                 </div>
