--- a/src/main/resources/templates/account/register.html
+++ b/src/main/resources/templates/account/register.html
@@ -24,47 +24,46 @@
     <div class="site-section bg-light">
         <div class="container">
             <div class="row">
+                <div class="col-md-6 offset-md-3">
 
-                <div class="col-md-12 mb-5">
-
-                    <form th:method="POST" th:action="@{/register}" th:object="${register}"
-                          class="p-5 bg-white form-register">
-                        <div class="row form-group">
-                            <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="login">Tài khoản</label>
-                                <input th:field="*{login}" type="text" id="login" class="form-control"
-                                       placeholder="Tài khoản">
-                            </div>
+                    <form th:method="POST" th:action="@{/register}" th:object="${register}" class="p-5 bg-white form-register">
+                        <div class="form-group">
+                            <label class="font-weight-bold" for="login">Tài khoản</label>
+                            <input th:field="*{login}" type="text" id="login" class="form-control" placeholder="Tài khoản">
                         </div>
-
-                        <div class="row form-group">
-                            <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="password">Mật khẩu</label>
-                                <input th:field="*{password}" type="password" id="password" class="form-control"
-                                       placeholder="Mật khẩu">
-                            </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold" for="password">Mật khẩu</label>
+                            <input th:field="*{password}" type="password" id="password" class="form-control" placeholder="Mật khẩu">
                         </div>
-
-                        <div class="row form-group">
-                            <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="fname">Tên </label>
-                                <input th:field="*{firstName}" type="text" id="fname" class="form-control"
-                                       placeholder="Tên">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label class="font-weight-bold" for="fname">Tên </label>
+                                    <input th:field="*{firstName}" type="text" id="fname" class="form-control" placeholder="Tên">
+                                </div>        
                             </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label class="font-weight-bold" for="lname">Họ</label>
+                                    <input th:field="*{lastName}" type="text" id="lname" class="form-control" placeholder="Họ">
+                                </div>
+                            </div>
+                        </div>                        
+                        <div class="form-group">
+                            <label class="font-weight-bold" for="email">Email</label>
+                            <input th:field="*{email}" type="text" id="email" class="form-control" placeholder="Email">
                         </div>
-
-                        <div class="row form-group mb-4">
-                            <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="lname">Họ</label>
-                                <input th:field="*{lastName}" type="text" id="lname" class="form-control"
-                                       placeholder="Họ">
-                            </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold" for="address">Địa chỉ</label>
+                            <input th:field="*{address}" type="text" id="address" class="form-control" placeholder="Địa chỉ">
                         </div>
-                        <div class="row form-group">
-                            <div class="col-lg-12">
-                                <label class="font-weight-bold">Giới tính</label>
-                            </div>
-                            <div class="col-lg-12">
+                        <div class="form-group">
+                            <label class="font-weight-bold" for="phone">Số điện thoại</label>
+                            <input th:field="*{phone}" type="text" id="phone" class="form-control" placeholder="Số điện thoại">
+                        </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold">Giới tính</label>
+                            <div>
                                 <div class="form-check form-check-inline">
                                     <label for="male">
                                         <input class="form-check-input" th:field="*{gender}" value="1" type="radio" id="male"> Nam
@@ -82,42 +81,11 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="form-row mb-4">
-                            <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="email">Email</label>
-                                <input th:field="*{email}" type="text" id="email" class="form-control"
-                                       placeholder="Email">
-                            </div>
+                        <div class="form-group">
+                            <button type="submit"class="btn btn-primary px-4 py-2 btn-block btn-lg">Đăng ký</button>
                         </div>
-
-                        <div class="row form-group mb-4">
-                            <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="address">Địa chỉ</label>
-                                <input th:field="*{address}" type="text" id="address" class="form-control"
-                                       placeholder="Địa chỉ">
-                            </div>
-                        </div>
-
-                        <div class="row form-group mb-4">
-                            <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="phone">Số điện thoại</label>
-                                <input th:field="*{phone}" type="text" id="phone" class="form-control"
-                                       placeholder="Số điện thoại">
-                            </div>
-                        </div>
-                        <div class="row form-group">
-                            <div class="col-md-12 mb-3 mb-md-0">
-                                <a th:href="@{/login}" class="hyperlink font-italic" style="font-size: 14px">Bạn đã có tài khoản? Bấm để đăng nhập</a>
-                            </div>
-                        </div>
-                        <div class="row form-group">
-                            <div class="col-md-12 text-center">
-                                <button type="submit"class="btn-reset-css btn-svg-UI fill-green">
-                                    <svg><rect></rect></svg>
-                                    <span>Đăng ký</span>
-                                </button>
-                            </div>
+                        <div class="form-group text-center mb-0">
+                            <a th:href="@{/login}" class="hyperlink small">Bạn đã có tài khoản? Bấm để đăng nhập</a>
                         </div>
                     </form>
                 </div>
