--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -330,7 +330,6 @@ a:hover {
   z-index: 99;
   width: 100%;
   padding: 20px 0;
-  margin-bottom: 113px;
   left: 0;
   -webkit-transition: 0.3s all ease;
   -o-transition: 0.3s all ease;
@@ -764,7 +763,7 @@ a:hover {
 .site-blocks-cover,
 .site-blocks-cover > .container > .row {
   min-height: 600px;
-  height: calc(100vh);
+  height: calc(100vh - 113px);
 }
 
 .site-blocks-cover.inner-page,
