--- a/src/main/resources/templates/task/room/room.html
+++ b/src/main/resources/templates/task/room/room.html
@@ -3,20 +3,17 @@
 <head>
     <title>Thông tin công việc</title>
     <th:block th:include="fragment/layout :: head"></th:block>
-<<<<<<< HEAD
-    <link rel="stylesheet" th:href="@{~/css/responsive/task/create.css}">
+    <link rel="stylesheet" th:href="@{~/css/task/create.css}">
     <link rel="stylesheet" th:href="@{~/css/responsive/room/room.css}">
-=======
-    <link rel="stylesheet" th:href="@{~/css/task/create.css}"/>
->>>>>>> e765a2a4ecb9e0f446e2e45473de1f22683aae75
 </head>
 <body>
 
-<th:block th:include="fragment/layout :: site-mobile-memu"></th:block>
-
-<th:block th:include="fragment/layout :: site-navbar"></th:block>
-<div style="height: 113px;"></div>
 <div class="site-wrap">
+    <th:block th:include="fragment/layout :: site-mobile-memu"></th:block>
+
+    <th:block th:include="fragment/layout :: site-navbar"></th:block>
+    <div style="height: 113px;"></div>
+
     <div class="site-section bg-light">
         <div class="container">
             <div class="row">
@@ -35,88 +32,69 @@
                     <div class="panel panel--spaced panel--with-overflow">
                         <div class="row">
                             <div class="col-lg-3 col-sm-3 col-12 box-img-tasker">
-                                <img th:src="@{~/images/person_1.jpg}" alt="" class="confirm-avatar-tasker">
+                                <!--                                <img th:src="@{~/images/person_1.jpg}" alt="" class="confirm-avatar-tasker">-->
                             </div>
                             <div class="col-lg-9 col-12 col-sm-9">
                                 <div class="task-name text-bold" style="font-size: 18px">
-                                    <div th:title="'Công việc nhà'" class="name" th:text="${task.title}"></div>
-                                    <!--Trạng thái công việc-->
-                                    <span
-                                        class="ml-lg-3 badge badge-warning text-white text-bold p-2">Đang thực hiện</span>
-                                    <!--                                    <span class="ml-lg-2 badge badge-danger text-white text-bold p-2">Đã hủy</span>-->
-                                    <!--                                    <span class="ml-lg-2 badge badge-primary text-white text-bold p-2">Hoàn thành</span>-->
+                                    <div th:title="'Công việc nhà'" class="name" th:text="${task.getName()}"></div>
                                 </div>
-                                <div class="tasker-name mt-1" th:text="${task.getTasker().getUser().getUser().getFirstName() + ' ' + task.getTasker().getUser().getUser().getLastName()}">
+                                <div class="tasker-name mt-1"
+                                     th:text="${task.getTasker().getUser().getLastName() + ' ' + task.getTasker().getUser().getFirstName()}">
                                     Trần Hiểu Đông
                                 </div>
                             </div>
-<<<<<<< HEAD
-=======
                             <div class="col-lg-3">
-                                <img th:src="${task.tasker.user.user.imageUrl}" alt="" class="confirm-avatar-tasker">
+                                <img th:src="${task.getTasker().getImage()}" alt="" class="confirm-avatar-tasker">
                             </div>
->>>>>>> e765a2a4ecb9e0f446e2e45473de1f22683aae75
                         </div>
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
                         <div class="row">
                             <div class="col-lg-12">
                                 <span class="icon-calendar-o mr-lg-3 t-green"></span>
-                                <!--<span th:text="${task.schedule.from}">22 - T11, 8:30 </span>-->
-                                <span th:text="${#dates.format(task.schedule.from, 'dd-MM-yyyy, HH:mm')}">22 - T11, 8:30 </span>
+                                <span th:text="${#dates.format(task.getFrom(), 'dd-MM-yyyy, HH:mm')}"></span>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
                                 <span class="icon-room mr-lg-3 t-green"></span>
-                                <span th:text="${task.address}">Hà Nội - Từ Liêm </span>
+                                <span th:text="${task.getAddress()}"></span>
                             </div>
                         </div>
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
                         <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-12">
                                 <span class="icon-chevron-down iconSlideUp roomTask"></span>
                                 <span class="text-bold">Chi tiết công việc</span>
                                 <div class="box-option mt-3">
-                                    <div class="form-group w-100">
-                                        <i class="icon-clock-o t-green mr-lg-1"></i> Thời gian dự kiến:
-                                        <div class="t-14 px-lg-3 mt-1" >
-                                            <span th:text="${task.estimatedTime + ' Giờ'}">2 Giờ</span>
-                                        </div>
-                                    </div>
-                                    <div class="form-group w-100">
-                                        <i class="icon-book t-green mr-lg-1"></i> Danh mục:
-                                        <div class="t-14 px-lg-3 mt-1">
-                                            <span th:text="${task.taskCategory.name}">Việc nhà, Thợ điện</span>
-                                        </div>
-                                    </div>
-                                    <div class="form-group w-100">
-                                        <i class="icon-phone  t-green mr-lg-1"></i> Số điện thoại:
-                                        <div class="row px-3">
-                                            <div class="col-lg-4 t-14">- Khách hàng</div>
-                                            <div class="col-lg-1 p-0 t-14">:</div>
-                                            <div class="col-lg-7 t-14">
-                                                <span th:text="${task.master.user.phone}">0349555602</span>
-                                            </div>
-                                        </div>
-                                        <div class="row px-3">
-                                            <div class="col-lg-4 t-14">- Nhân viên</div>
-                                            <div class="col-lg-1 p-0 t-14">:</div>
-                                            <div class="col-lg-7 t-14">
-                                                <span th:text="${task.tasker.user.phone}">0349555602</span>
+<!--                                    <div class="row">-->
+<!--                                        <div class="col-12">-->
+<!--                                            <i class="icon-book t-green mr-lg-1"></i>-->
+<!--                                            <label class="font-weight-bold">Danh mục</label>-->
+<!--                                            <div class="mt-1">-->
+<!--                                                <span th:text="${task.getTaskCategory().getName()}"></span>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <i class="icon-phone t-green mr-lg-1"></i>
+                                            <label class="font-weight-bold">Số điện thoại</label>
+                                            <div class="mt-1 row">
+                                                <div class="col-lg-6">Tasker:</div>
+                                                <div class="col-lg-6 text-right">
+                                                    <span th:text="${task.getTasker().getPhone()}"></span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <i class="icon-details t-green mr-lg-1"></i> Nôi dung công việc:
-                                        <div class="px-3 t-14 mt-2">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <i class="icon-details t-green mr-lg-1"></i>
+                                            <label class="font-weight-bold">Mô tả</label>
+                                            <div class="mt-1">
                                             <span th:text="${task.description}">
-                                                - Vấn đề lớn nhất trong cuộc sống là cuộc sống luôn tồn tại những vấn đề.
-                                                <br>
-                                                - Theo thống kê của NASA thì loài người là động vật nhiều sừng nhất trên thế
-                                                giới.<br>
-                                                - Nếu bạn ngu mà biết mình ngu có nghĩa bạn người có trí tuệ nhưng ngay khi
-                                                bạn có trí tuệ mà biết mình ngu thì đúng là bạn ngu rồi.
                                             </span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -127,13 +105,17 @@
                             <div class="col-lg-6 text-bold t-20">
                                 Giá tiền (vnđ/giờ):
                             </div>
-<<<<<<< HEAD
-                            <div class="col-lg-6 t-20 t-green">
-                                80.000 vnđ/1h
-=======
                             <div class="col-lg-6 text-right t-20 t-green">
-                                <span th:text="${#numbers.formatDecimal(task.taskCategory.minPrice, 0, 'COMMA', 0, 'POINT')}">80.000</span><span> vnđ/1h</span>
->>>>>>> e765a2a4ecb9e0f446e2e45473de1f22683aae75
+                                <span
+                                    th:text="${#numbers.formatDecimal(task.getPrice(), 0, 'COMMA', 0, 'POINT')}"></span><span> VND/giờ</span>
+                            </div>
+                        </div>
+                        <div style="height: 1px;background: #dadada" class="my-3"></div>
+                        <div class="row">
+                            <div class="col-12 text-center">
+                                <span
+                                    class="ml-lg-3 badge badge-info text-white text-bold p-2"
+                                    th:text="${task.getStatus()}"></span>
                             </div>
                         </div>
                     </div>
@@ -142,10 +124,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center my-4">
                     <button type="button" class="btn-task-done btn-primary btn px-5 py-3 text-uppercase">
-                        <!--                        <span></span>-->
-                        <!--                        <span></span>-->
-                        <!--                        <span></span>-->
-                        <!--                        <span>Hoàn thành công việc</span>-->
                         Hoàn thành công việc
                     </button>
                 </div>
@@ -159,7 +137,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-uppercase" >Nhận xét & đánh giá</h5>
+                    <h5 class="modal-title text-uppercase">Nhận xét & đánh giá</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -168,7 +146,8 @@
                     <form>
                         <div class="form-group">
                             <label class="col-form-label text-bold">Nhận xét</label>
-                            <textarea class="form-control" rows="4" placeholder="Đôi lời nhận xét về nhân viên của bạn..."></textarea>
+                            <textarea class="form-control" rows="4"
+                                      placeholder="Đôi lời nhận xét về nhân viên của bạn..."></textarea>
                         </div>
                         <div class="form-group">
                             <label class="col-form-label text-bold ">Đánh giá</label>
@@ -193,10 +172,6 @@
     <!--END MODAL-->
 </div>
 <th:block th:include="fragment/layout :: javascript"></th:block>
-<<<<<<< HEAD
 <script th:src="@{~/js/task/room-task.js}"></script>
-=======
-<script th:src="@{/js/task/room-task.js}"></script>
->>>>>>> e765a2a4ecb9e0f446e2e45473de1f22683aae75
 </body>
 </html>
