--- a/src/main/resources/templates/task/room/room.html
+++ b/src/main/resources/templates/task/room/room.html
@@ -143,10 +143,9 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form>
                         <div class="form-group">
                             <label class="col-form-label text-bold">Nhận xét</label>
-                            <textarea class="form-control" rows="4"
+                            <textarea id="reviewContent" class="form-control" rows="4"
                                       placeholder="Đôi lời nhận xét về nhân viên của bạn..."></textarea>
                         </div>
                         <div class="form-group">
@@ -160,11 +159,11 @@
                             </div>
                         </div>
                         <input type="hidden" id="valueStarRating">
+                        <input type="hidden" id="taskId" th:value="${task.id}">
                         <div class="form-group w-100 text-right mt-2">
-                            <button class="btn btn-primary mx-2 w-25 text-uppercase">Gửi</button>
-                            <a href="#" class="btn btn-warning w-25 text-white text-uppercase">Bỏ qua</a>
+                            <button class="btn btn-primary mx-2 w-25 text-uppercase" id="saveReviewBtn">Gửi</button>
+                            <button class="btn btn-warning w-25 text-white text-uppercase" data-dismiss="modal">Bỏ qua</button>
                         </div>
-                    </form>
                 </div>
             </div>
         </div>
