Fuck CRSF & autogen special fields

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -22,8 +22,8 @@
             <div class="row align-items-center">
                 <div class="col-12 text-center" data-aos="fade">
                     <h1 class="mb-5">Không cần tự tay hoàn thành công việc</h1>
-                    <a href="/intro/" class="bg-primary text-white py-4 px-4 rounded text-uppercase">
-                        Hoàn thành đăng ký
+                    <a th:href="@{/task/create/step1}" class="bg-primary text-white py-4 px-4 rounded text-uppercase">
+                        Đăng việc ngay
                     </a>
                 </div>
             </div>
@@ -288,7 +288,7 @@
                             <h2 class="h4">Mạng lưới Tasker lớn</h2>
                             <p>TaskUnite có lượng nhân sự lớn, được phân bổ đều trên các Quận Huyện Thành Phố Hà Nội.</p>
                             <p><a href="#">Read More <span class="icon-arrow-right small"></span></a></p>
-                        </div>        
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <div class="text-center p-4 item" data-aos="fade">
