--- a/src/main/resources/templates/task/create/step4.html
+++ b/src/main/resources/templates/task/create/step4.html
@@ -15,7 +15,7 @@
 
     <form th:action="@{/task/create/step4}" th:object="${taskInfo}" method="post">
 
-        <div class="site-section bg-dark-light">
+        <div class="site-section bg-light">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-lg-4 p-2">
